--- a/ECSPrime/Packages/manifest.json
+++ b/ECSPrime/Packages/manifest.json
@@ -11,8 +11,9 @@
     "com.unity.multiplayer-hlapi": "1.0.2",
     "com.unity.package-manager-ui": "2.1.2",
     "com.unity.physics": "0.1.0-preview",
-    "com.unity.postprocessing": "2.1.4",
+    "com.unity.postprocessing": "2.1.7",
     "com.unity.purchasing": "2.0.6",
+    "com.unity.rendering.hybrid": "0.0.1-preview.13",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "2.0.2",
