--- a/ECSPrime/Packages/manifest.json
+++ b/ECSPrime/Packages/manifest.json
@@ -2,21 +2,20 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.burst": "1.1.2",
-    "com.unity.collections": "0.1.1-preview",
+    "com.unity.ads": "2.0.8",
+    "com.unity.analytics": "3.3.2",
+    "com.unity.collab-proxy": "1.2.16",
     "com.unity.entities": "0.1.1-preview",
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.0.8",
     "com.unity.ide.vscode": "1.0.7",
-    "com.unity.jobs": "0.1.1-preview",
-    "com.unity.mathematics": "1.1.0",
-    "com.unity.mobile.android-logcat": "1.0.0",
+    "com.unity.multiplayer-hlapi": "1.0.2",
     "com.unity.package-manager-ui": "2.2.0",
     "com.unity.physics": "0.2.0-preview",
-    "com.unity.postprocessing": "2.1.7",
-    "com.unity.render-pipelines.lightweight": "6.9.1",
+    "com.unity.purchasing": "2.0.6",
+    "com.unity.render-pipelines.lightweight": "6.9.0",
     "com.unity.rendering.hybrid": "0.1.1-preview",
-    "com.unity.test-framework": "1.0.18",
+    "com.unity.test-framework": "1.0.13",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.1.0",
     "com.unity.ugui": "1.0.0",
